--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "D": "^1.0.0",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.12"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.4"
   }
 }
