--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "D": "^1.0.0",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^10.2.0",
+    "rc-slider": "^9.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.32.12"
   },
   "devDependencies": {
